# mlx-regex

./: CMakeLists.txt  README.md  mlx-regex.service  mlx_regex.spec
contrib/: mlx_regex_setup_hugepages.sh
debian/: README.Debian  changelog  control  copyright  files  rules
src/: CMakeLists.txt  devx_prm.h  mlx5_regex.c  mlx5_regex_ifc.h
